# new-zo

./: .gitignore  Makefile  docker-compose.yml
auth/: .config.dev.env  .config.test.env  .database.dev.env  .database.test.env  Dockerfile  auth.py  compose.yml  domain.py  http.py  main.py  pyproject.toml  pytest.ini  repository.py
auth/__tests__/: api.py  conftest.py
auth/migrations/: 001_init.sql
lib/logger/: config.py
scripts/: migrate.sh
