[project]
name = "auth-service-zodiak"
version = "0.0.01"
description = "Authorization service for zodiak project"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "passlib>=1.7.4",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "python-multipart", 
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-watch",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["auth*", "lib*"]
